# L1Demoparty

./: .gitmodules  README.md  gota_font.c  last_year_animations.txt
L1DP-2015/: .gitignore  L1DemoJamisNemo.c  L1DemoJamisNemo.h  Thumbs.db  cat-sprite.psd
L1DP-2016/: .gitignore  tallfont.h
L1DP-2017/: .gitignore  still_alive_notes.text
L1DP-2018/: libopencm3.rules.mk
L1DP-2018-pic/L1DP-2018.X/: CMakeLists.txt  allTracks.h  app_device_audio_midi.c  app_led_usb_status.c  color_management.h  credits2017.h  demo_management.c  demo_management.h  drawing_helpers.h  fb_control.c  fonts.h  intro.c  intro.h  main.c  music.c  music.h  serial.c  shared.h  synth.c  synth.h  system.c  system.h  text.h  trackerUI.c  trackerUI.h  usb_config.h  usb_descriptors.c  usb_device.h  usb_events.c
L1DP-2018-pic/L1DP-2018.X/nbproject/: Makefile-default_optimizations_on.mk  Makefile-genesis.properties  Makefile-impl.mk  Makefile-variables.mk  Package-default_optimizations_on.bash  Package-no_optimizations.bash  configurations.xml  project.xml
L1DP-2018-pic/L1DP-2018.X/nbproject/private/: configurations.xml  private.xml
L1DP-2018-stm32/: README.md
L1DemoJamisNemo.X/: CMakeLists.txt  color_management.c  color_management.h  demo_management.c  demo_management.h  drawing_helpers.c  drawing_helpers.h  fb_control.c  fb_control.h  fonts.h  helpers.c  helpers.h  main.c  music.c  music.h  original.c  particles.c  particles.h  resolution_management.c  resolution_management.h  screens.h  serial.c  serial.h  sprites.c  sprites.h  text.c
docs/: UART_tutorial.md  USB_Notes.md
(+132 files in other folders)
